2001-02-07  James LewisMoss  <dres@phoenixdsl.com>

	* make-gnucash-patch.in: Add a file ending that is ignored.

	* src/doc/xml/types.dtd: Change currency-type -> commodity-type.
	Add defs for cmd:space and cmd:id.

	* src/doc/xml/io-gncxml-version1.dtd: Change currency-type ->
	commodity-type.

	* src/doc/xml/account-v2.dtd: Change currency-type ->
	commodity-type.

2001-02-06  James LewisMoss  <dres@phoenixdsl.com>

	* src/engine/sixtp.c: Use frame creator.
	Move sixtp_handle_catastrophe to here. Add functions
	sixtp_context_new, sixtp_context_destroy.  And change and move
	sixtp_parse_file and sixtp_parse_buffer here from io-gncxml-r.c
	Add concept of a parsing context to hold data.

	* src/engine/sixtp-stack.h: Add creator.  Add headers.

	* src/engine/sixtp-stack.c: Add creator.

	* src/engine/sixtp-parsers.h: add needed headers.
	Add func from sixtp-to-dom-parser.c

	* src/engine/io-gncxml.h: Fix name.

	* src/engine/io-gncxml-w.c: Fix name.

	* src/engine/io-gncxml-r.c: Fix name.  Create stack frame creator
	function and use here.

2001-02-05  James LewisMoss  <dres@phoenixdsl.com>

	* src/engine/sixtp-stack.h: Add glib.h include (needed for GSList)

	* src/engine/sixtp.c: Add catchall tag for parsing handlers.  Use
	name instead of next_parser_tag since that can now contain a magic
	value.

2001-02-05  Bill Gribble  <grib@billgribble.com>

	* src/scm/qif-import/qif-merge-groups.scm: new file.  Utilities
	for detecting duplicate transactions in two account groups.

	* src/scm/qif-import/qif-quick-import.scm: new file (unfinished).
	A start at a "quick import" facility that will import a single
	QIF file with very little interaction. 

	* src/engine/Group.c: be sure to free account split list and
	set to NULL on merge

	* src/engine/Query.c: add a new API to get Transactions from a
	query instead of splits.  you have to specify whether you want
	transactions with one split matching the query or all splits
	matching the query.  More options later.
